--- a/portfolio_sh/index.html
+++ b/portfolio_sh/index.html
@@ -28,7 +28,7 @@
 		</div>
 			<!-- page-nav -->
 		<nav class="page-nav">
-			<h3 class="contents">목차</h3>
+			<h3 class="contents">목차1</h3>
 			<a href="grid.html"><span class="order">첫번째</span>Fluid Grid</a>
 			<a href="flex.html"><span class="order">두번째</span>Flexible Box</a>
 			<a href="responsive_menu.html"><span class="order">세번째</span>Responsive Menu</a>
