--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<!-- page-nav -->
 		<nav class="page-nav">
 			<h3 class="contents">목차</h3>
-			<a href="portfolio_sh/grid.html"><span class="order">첫번째</span>Fluid Grid</a>
+			<a href="grid.html"><span class="order">첫번째</span>Fluid Grid</a>
 			<a href="flex.html"><span class="order">두번째</span>Flexible Box</a>
 			<a href="responsive_menu.html"><span class="order">세번째</span>Responsive Menu</a>
 			<a href="tab_menu.html"><span class="order">네번째</span>Tab Menu</a>
